--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "postinstall": "npm run build && node run-migration.js || true"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,8 @@
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "redis": "^5.10.0",
-    "zod": "^4.3.2"
+    "zod": "^4.3.2",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -36,7 +38,6 @@
     "@types/pg": "^8.16.0",
     "@types/redis": "^4.0.10",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
