--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "postinstall": "npm run build && node run-migration.js || true"
+    "seed": "ts-node src/seed.ts"
   },
   "keywords": [],
   "author": "",
