--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "seed": "ts-node src/seed.ts"
+    "seed": "ts-node src/seed.ts",
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -37,3 +38,4 @@
     "ts-node": "^10.9.2"
   }
 }
+
