--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "redis": "^5.10.0",
-    "zod": "^4.3.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -32,10 +33,10 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.16.0",
     "@types/redis": "^4.0.10",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2"
   }
 }
-
