--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "redis": "^5.10.0",
+    "resend": "^6.6.0",
     "typescript": "^5.9.3",
     "zod": "^4.3.2"
   },
